--- a/src/index.css
+++ b/src/index.css
@@ -81,12 +81,11 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 17%;
     max-width: 620px;
-    /* background: #fff; */
     opacity: 0.7;
     background-color: black;
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    /*padding: 12px 24px;*/
     margin-left: 10px;
     font-size: 13px;
     line-height: 2;
@@ -96,4 +95,5 @@
     height: 100vh;
     overflow-y: scroll;
   }
+
 }
